# Cred_Line

./: Anchor.toml  Cargo.toml  README.md  bb.txt  package.json
flowwork-frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
flowwork-frontend/app/: globals.css  layout.tsx  page.tsx
flowwork-frontend/app/badges/: page.tsx
flowwork-frontend/app/contracts/: page.tsx
flowwork-frontend/app/contracts/[id]/: page.tsx
flowwork-frontend/app/contracts/new/: page.tsx
flowwork-frontend/app/dashboard/: page.tsx
flowwork-frontend/app/explore/: page.tsx
flowwork-frontend/app/lend/: page.tsx
flowwork-frontend/app/score/: page.tsx
flowwork-frontend/components/: address-display.tsx  badge-card.tsx  countdown-timer.tsx  empty-state.tsx  glass-card.tsx  score-gauge.tsx  stat-card.tsx  wallet-button.tsx
flowwork-frontend/components/layout/: gradient-mesh-bg.tsx  navbar.tsx
flowwork-frontend/lib/: query-client.ts  utils.ts
flowwork-frontend/lib/anchor/: pda.ts  program-ids.ts  provider.ts
flowwork-frontend/lib/hooks/: useBadge.ts  useContracts.ts  useLoan.ts  useScoreAccount.ts
flowwork-frontend/providers/: query-provider.tsx  wallet-provider.tsx
programs/flowbadge/: Cargo.toml
programs/flowbadge/src/: errors.rs  lib.rs
programs/flowbadge/src/instructions/: mint_badge.rs  mod.rs  update_badge.rs
programs/flowbadge/src/state/: badge.rs  mod.rs  score.rs  tier.rs
programs/flowlend/: Cargo.toml
programs/flowlend/src/: errors.rs  lib.rs  types.rs
programs/flowlend/src/instructions/: borrow.rs  initialize_pool.rs  mod.rs  repay.rs
programs/flowlend/src/state/: loan.rs  mod.rs  pool.rs  score.rs  vault.rs
programs/flowpay/: Cargo.toml
programs/flowpay/src/: errors.rs  lib.rs
programs/flowpay/src/instructions/: cancel_flowpay.rs  close_payment_history.rs  create_flowpay.rs  execute_flowpay.rs  mod.rs  reapprove_flowpay.rs
programs/flowpay/src/state/: flowpay.rs  mod.rs  pay_history.rs
programs/flowscore/: Cargo.toml
programs/flowscore/src/: errors.rs  lib.rs
programs/flowscore/src/instructions/: mod.rs  state.rs  update_score.rs
programs/flowscore/src/state/: mod.rs  score.rs
tests/: Cargo.toml  flowbadge.rs  flowbadge.ts  flowlend.rs  flowlend.ts  flowpay.rs  flowpay.ts  flowscore.rs  flowscore.ts
tests/helpers/: helpers.rs  mod.rs  setup.rs
tests/src/helpers/: setup.rs
