cargo-features = ["edition2024"]

[workspace]
members = ["programs/*"]
resolver="2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1


[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
crypto-common = "=0.1.6"
block-buffer = "=0.10.4"
cpufeatures = "=0.2.12"