[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
block-buffer = { version = "=0.10.4", package = "block-buffer" }
digest = { version = "=0.10.7", package = "digest" }
crypto-common = { version = "=0.1.6", package = "crypto-common" }
cpufeatures = { version = "=0.2.12", package = "cpufeatures" }
