[package]
name = "cred-line-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
flowpay = { path = "../programs/flowpay" }
flowscore = { path = "../programs/flowscore" }
flowbadge = { path = "../programs/flowbadge" }
flowlend = { path = "../programs/flowlend" }

anchor-lang = "0.32.1"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }