[package]
name = "cred-line-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
flowpay = { path = "../programs/flowpay" }
flowscore = { path = "../programs/flowscore", features = ["exports"] }
flowbadge = { path = "../programs/flowbadge" }
flowlend = { path = "../programs/flowlend" }

anchor-lang = "0.32.1"

[dev-dependencies]
litesvm = "0.10.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }