[package]
name = "flowpay"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flowpay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
#anchor-lang = {version="0.32.1", features=["init-if-needed"]}
anchor-lang = {version="0.29.0", features=["init-if-needed"]}
anchor-spl="0.32.1"
crypto-common = { workspace = true }
block-buffer = { workspace = true }
cpufeatures = { workspace = true }


[dev-dependencies]
# litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
